<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_trail_blazer_demos</name>
  <version>0.0.0</version>
  <description>Demos for odometry with trailblazer robot</description>
  <maintainer email="nathanroger314@gmail.com">nathan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  <depend>imu_odom</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rviz2</depend>
  <depend>trailblazer_description</depend>
  <depend>phasma_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>lid_odom</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
